# Links

./: .gitignore  build.py  links.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/: index.html
