[project]
name = "centralisation"
version = "0.1.0"
description = ""
authors = [
    { name = "benjamindenise", email = "benjamin.denise@protonmail.com" },
]
requires-python = ">=3.9,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["Jinja2>=3.1.6,<4", "PyYAML>=6.0,<7"]

[project.urls]
Homepage = "https://centralisation.eclair.ec-lyon.fr/"

[dependency-groups]
dev = ["black>=25.1.0,<26"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = false
